--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -29,4 +29,14 @@ p
 
 a
   text-decoration none
-  
+
+
+.content
+  width 1170px
+  margin 0 auto
+  &.content-relative
+    position relative
+    z-index 3
+
+img
+  max-width: 100%
