--- a/markup/components/header/header.jade
+++ b/markup/components/header/header.jade
@@ -1,2 +1,41 @@
 mixin header(data)
   header.header 
+
+    .content
+
+      .header-wrapper
+
+        //- Header left
+        .header-left
+          a(href="index.html").logo
+            img(src="static/img/assets/header/logo.png" alt="Logo")
+
+          .header-tagline
+            span Дизельные двигатели производства ЯМЗ 
+              br
+              | для отечественной и зарубежной техники
+
+
+        //- Header Right
+        .header-right
+
+          .header-contacts
+
+            //- Header Cnt
+            .header-cnt
+
+              .header-phone
+                a(href="tel:+7 (800) 700-03-74") +7 (800) 700-03-74
+
+              .header-worktime
+                span Пн-Пт 9.00-18.00
+            
+            //- Header Cnt
+            .header-cnt
+
+              .header-phone
+                a(href="tel:+7 (4852) 58-20-70") +7 (4852) 58-20-70
+
+              .header-mail
+                a(href="mailto:dizeltraid@mail.ru") dizeltraid@mail.ru
+            
