--- a/markup/pages/index.jade
+++ b/markup/pages/index.jade
@@ -4,7 +4,7 @@ html(class="no-js", lang="ru")
   include ../components/head/head
   include ../components/header/header
   include ../components/home/home
-
+  include ../components/offer/offer
   head
     +head(head.defaults)
   body.page
@@ -13,6 +13,8 @@ html(class="no-js", lang="ru")
     +header()
 
     +home()
+
+    +offer()
 
     script(src='%=static=%js/separate-js/svg4everybody.min.js')
     script svg4everybody();
