--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -21,6 +21,7 @@ h3
   font-family $Bold
   letter-spacing: 0.01em
 
+
 p
   font-size 20px
   line-height 26px
@@ -40,3 +41,13 @@ a
 
 img
   max-width: 100%
+
+section
+  padding-top 90px
+  padding-bottom 90px
+.title
+  text-align center
+  margin-bottom 90px
+
+.text-blue
+  color $bl
