--- a/markup/components/offer/offer.styl
+++ b/markup/components/offer/offer.styl
@@ -42,7 +42,7 @@
 .offer
   &-element
     position absolute
-    bottom 0
+    bottom -140px
     left 50%
     transform: translateX(-50%)
     z-index 0
