--- a/markup/pages/index.jade
+++ b/markup/pages/index.jade
@@ -6,6 +6,7 @@ html(class="no-js", lang="ru")
   include ../components/home/home
   include ../components/offer/offer
   include ../components/save/save
+  include ../components/advantages/advantages
   head
     +head(head.defaults)
   body.page
@@ -18,6 +19,8 @@ html(class="no-js", lang="ru")
     +offer()
 
     +save()
+
+    +advantages()
 
     script(src='%=static=%js/separate-js/svg4everybody.min.js')
     script svg4everybody();
