--- a/markup/pages/index.jade
+++ b/markup/pages/index.jade
@@ -7,6 +7,7 @@ html(class="no-js", lang="ru")
   include ../components/offer/offer
   include ../components/save/save
   include ../components/advantages/advantages
+  include ../components/price/price
   head
     +head(head.defaults)
   body.page
@@ -21,6 +22,8 @@ html(class="no-js", lang="ru")
     +save()
 
     +advantages()
+
+    +price()
 
     script(src='%=static=%js/separate-js/svg4everybody.min.js')
     script svg4everybody();
