--- a/markup/pages/index.jade
+++ b/markup/pages/index.jade
@@ -8,6 +8,7 @@ html(class="no-js", lang="ru")
   include ../components/save/save
   include ../components/advantages/advantages
   include ../components/price/price
+  include ../components/contract/contract
   head
     +head(head.defaults)
   body.page
@@ -24,6 +25,8 @@ html(class="no-js", lang="ru")
     +advantages()
 
     +price()
+
+    +contract()
 
     script(src='%=static=%js/separate-js/svg4everybody.min.js')
     script svg4everybody();
