--- a/markup/components/offer/offer.jade
+++ b/markup/components/offer/offer.jade
@@ -40,5 +40,5 @@ mixin offer(data)
         
         .video-wrapper
 
-          a(href="https://www.youtube.com/watch?v=RBumgq5yVrA")
+          a(href="https://www.youtube.com/watch?v=RBumgq5yVrA" data-fancybox)
             img(src="static/img/assets/offer/video.jpg", alt="")
