--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -22,6 +22,13 @@ h3
   letter-spacing: 0.01em
 
 
+h4
+  font-size 25px
+  line-height 32px
+  color $bk
+  font-family $Bold
+  letter-spacing: 0.01em
+
 p
   font-size 20px
   line-height 26px
