--- a/markup/pages/index.jade
+++ b/markup/pages/index.jade
@@ -13,6 +13,7 @@ html(class="no-js", lang="ru")
   include ../components/virew/virew
   include ../components/sertificates/sertificates
   include ../components/portfolio/portfolio
+  include ../components/any/any
   head
     +head(head.defaults)
   body.page
@@ -39,6 +40,8 @@ html(class="no-js", lang="ru")
     +sertificates()
 
     +portfolio()
+
+    +any()
 
     script(src='%=static=%js/separate-js/svg4everybody.min.js')
     script svg4everybody();
