--- a/markup/pages/index.jade
+++ b/markup/pages/index.jade
@@ -13,6 +13,7 @@ html(class="no-js", lang="ru")
   include ../components/virew/virew
   include ../components/sertificates/sertificates
   include ../components/portfolio/portfolio
+  include ../components/quiz/quiz
   include ../components/any/any
   include ../components/contacts/contacts
   include ../components/footer/footer
@@ -42,6 +43,8 @@ html(class="no-js", lang="ru")
     +sertificates()
 
     +portfolio()
+
+    +quiz()
 
     +any()
 
