--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -29,6 +29,13 @@ h4
   font-family $Bold
   letter-spacing: 0.01em
 
+
+h6
+  font-size 16px
+  color $wh
+  font-family $Light
+  span
+    font-family $Bold
 p
   font-size 20px
   line-height 26px
