--- a/markup/components/quiz/quiz.jade
+++ b/markup/components/quiz/quiz.jade
@@ -10,7 +10,7 @@ mixin quiz(data)
           | двигателя уже через 
           span 15 минут
 
-      #quiz.quiz-proces-1
+      #quiz.quiz-process-1
         .quiz-wrapper
           .quiz-title
             h4 Узнайте стоимость вашего двигателя 
