--- a/markup/components/quiz/quiz.styl
+++ b/markup/components/quiz/quiz.styl
@@ -135,8 +135,6 @@
 
 
 .quiz
-  &-back
-    display none  
   &-form
     &__wrapper
       position relative
@@ -168,7 +166,10 @@
       margin-bottom 20px
       &:last-child
         margin-bottom 0px
-
+#quiz.quiz-process-1
+  .quiz-back
+    display none
+    
 #quiz.quiz-process-2
   .quiz-steps ul li:nth-child(2) span
     background #5c5c5c
