--- a/markup/components/any/any.jade
+++ b/markup/components/any/any.jade
@@ -27,7 +27,7 @@ mixin any(data)
               span 700-03-74
             
           .any-button
-            +button('#','Связаться со специалистом')
+            +button('javascript:;','Связаться со специалистом')(data-fancybox data-src="#popup-callback")
           
           .any-bottom
 
