--- a/markup/components/button/button.styl
+++ b/markup/components/button/button.styl
@@ -8,6 +8,7 @@
   border: 1px solid #b80000
   box-sizing: border-box
   background #d10707
+  cursor pointer
   overflow hidden
   border-radius: 5px
   position relative
