--- a/markup/components/home/home.jade
+++ b/markup/components/home/home.jade
@@ -50,7 +50,7 @@ mixin home(data)
                   | и СНГ
 
           .home-button
-            +button('#','Узнать точную цену и сроки')
+            +button('javascript:;','Узнать точную цену и сроки')(data-fancybox data-src="#popup-callback")
 
         .home-right
           .home-image
