--- a/markup/components/price/price.jade
+++ b/markup/components/price/price.jade
@@ -26,7 +26,7 @@ mixin price(data)
           .price-cell
             span Цена, руб
           .price-cell
-            a(href='#') Узнать точную цену
+     
 
         //- Price Row
         .price-row
@@ -38,8 +38,8 @@ mixin price(data)
             span Автомобили, сельхозтехника, краны, Т-150 с Комплектом Переоборудования
           .price-cell
             span от 230 000
-          .price-cell
-            a(href='#') Узнать точную цену
+          .price-cell.price-cell__link
+            a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-236М2') Узнать точную цену
         
         //- Price Row
         .price-row
@@ -51,8 +51,8 @@ mixin price(data)
             span Спецтехника
           .price-cell
             span от 230 000
-          .price-cell
-            a(href='#') Узнать точную цену
+          .price-cell.price-cell__link
+            a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-236Г') Узнать точную цену
         
         //- Price Row
         .price-row
@@ -64,8 +64,8 @@ mixin price(data)
             span Тракторы Т-150К-09, ХТЗ-17221
           .price-cell
             span от 240 000
-          .price-cell
-            a(href='#') Узнать точную цену
+          .price-cell.price-cell__link
+            a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-236Д') Узнать точную ценуу
         
         //- Price Row
         .price-row
@@ -77,8 +77,8 @@ mixin price(data)
             span Автомобили МАЗ, спецтехника
           .price-cell
             span от 310 000
-          .price-cell
-            a(href='#') Узнать точную цену
+          .price-cell.price-cell__link
+            a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-238Б') Узнать точную цену
         
         //- Price Row
         .price-row
@@ -90,8 +90,8 @@ mixin price(data)
             span Автомобили МАЗ, КрАЗ, МЗКТ
           .price-cell
             span от 310 000
-          .price-cell
-            a(href='#') Узнать точную цену
+          .price-cell.price-cell__link
+            a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-238Д') Узнать точную цену
       
         //- Price Row
         .price-row
@@ -103,8 +103,8 @@ mixin price(data)
             span Тракторы Т-15.01Я, 221Я «Промтрактор»
           .price-cell
             span от 430 000
-          .price-cell
-            a(href='#') Узнать точную цену
+          .price-cell.price-cell__link
+            a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-238НД4-1') Узнать точную цену
       
         //- Price Row
         .price-row
@@ -116,8 +116,8 @@ mixin price(data)
             span Тракторы К-744Р «Кировец»
           .price-cell
             span от 330 000
-          .price-cell
-            a(href='#') Узнать точную цену
+          .price-cell.price-cell__link
+            a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-238НД5') Узнать точную цену
 
         //- Price Row
         .price-row
@@ -129,8 +129,8 @@ mixin price(data)
             span Карьерные самосвалы БелАЗ-75404 и мод.(общ.)
           .price-cell
             span от 450 000
-          .price-cell
-            a(href='#') Узнать точную цену
+          .price-cell.price-cell__link
+            a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-240М2') Узнать точную цену
 
 
       .price-bottom
