--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -82,3 +82,10 @@
   width 184px
   img
     width 100%
+
+
+.header
+  &.header-black
+    .header-cnt:last-child .header-phone a,
+    .header-mail a
+      color $bk
