--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -22,7 +22,7 @@
       font-size 20px
       line-height 28px
       color $gr
-      font-family $Reg
+      font-family $Italic
       letter-spacing: 0.01em
 
   &-contacts
@@ -89,3 +89,15 @@
     .header-cnt:last-child .header-phone a,
     .header-mail a
       color $bk
+
+
+.header.header-shadow
+  background $wh
+  box-shadow: 0px 5px 20px 0px rgba(23, 23, 23, 0.16);
+  height 100px
+  display flex
+  top 0
+  align-items center
+  .header-cnt:last-child .header-phone a,
+  .header-mail a
+    color $bk
