--- a/markup/components/home/home.styl
+++ b/markup/components/home/home.styl
@@ -37,3 +37,23 @@
         color $gr
         line-height:  27px
         font-family $Reg
+
+
+.home.home-black
+  background url('../img/assets/home-black/bg.jpg') no-repeat center/cover
+  padding-top 230px
+.home.home-black
+  .home-title
+    h1
+      font-family $Bold
+      span  
+        color #de4f46
+  .home-right
+    position relative
+  .home-form
+    position absolute
+    right 0
+    top -70px
+    button.button
+      span  
+        font-size 13px
