--- a/markup/components/quiz/quiz.jade
+++ b/markup/components/quiz/quiz.jade
@@ -13,10 +13,7 @@ mixin quiz(data)
       #quiz.quiz-process-1
         .quiz-wrapper
           .quiz-title
-            h4 Узнайте стоимость вашего двигателя 
-              span за 60 секунд 
-              | и получите доставку 
-              span бесплатно
+            h3 Пройдите опрос и узнайте точную цену и сроки
 
           .quiz-line
             .quiz-line__wrapper
