--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -58,3 +58,18 @@
   .popup-title
     font-size 20px
     margin-bottom 10px
+
+
+#home-form.popup
+  padding-left 35px
+  padding-right 35px
+  .popup
+    &-title
+      font-family $Bold
+      text-align center
+    &-subtitle
+      text-align center
+      color #575656
+      font-size 20px
+      font-family $Light
+      margin-bottom 25px
