--- a/markup/components/footer/footer.styl
+++ b/markup/components/footer/footer.styl
@@ -44,3 +44,15 @@
         color #1182a2
         text-decoration underline
     
+
+.reviews-pop
+  width 1170px
+  position relative
+  padding 0
+  .reviews
+    &-slide
+      &__item
+        box-sizing: border-box
+        margin 0
+        width 100%
+        padding 40px
