--- a/markup/components/reviews/reviews.jade
+++ b/markup/components/reviews/reviews.jade
@@ -21,11 +21,12 @@ mixin reviews(data)
               .reviews-slide__photo
                 img(src="static/img/assets/reviews/rev.jpg", alt="")
               .reviews-slide__text
-                h3 Филипп Иванов
-                span Техника, на которую установили двигатель
-                span Модель двигателя
+                h3.reviews-name Филипп Иванов
+                span.transp-name Техника, на которую установили двигатель 
+                span.model-name Модель двигателя
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                a(href="#") Смотреть полностью
+                p.hidden.reviews-full Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu ip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.рую установили двигатель Модель двигателя
+                a(href="javascript:;" data-fancybox data-src="#reviews-pop").open-reviews Смотреть полностью
           
           //- Reviews Slide
           .reviews-slide
@@ -33,11 +34,12 @@ mixin reviews(data)
               .reviews-slide__photo
                 img(src="static/img/assets/reviews/rev.jpg", alt="")
               .reviews-slide__text
-                h3 Филипп Иванов №1
-                span Техника, на которую установили двигатель
-                span Модель двигателя
+                h3.reviews-name Филипп Иванов №1
+                span.transp-name Техника, на которую установили двигатель №1
+                span.model-name Модель двигателя №1
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                a(href="#") Смотреть полностью
+                p.hidden.reviews-full Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu ip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.рую установили двигатель Модель двигателя №1
+                a(href="javascript:;" data-fancybox data-src="#reviews-pop").open-reviews Смотреть полностью
           
           //- Reviews Slide
           .reviews-slide
@@ -45,11 +47,12 @@ mixin reviews(data)
               .reviews-slide__photo
                 img(src="static/img/assets/reviews/rev.jpg", alt="")
               .reviews-slide__text 
-                h3 Филипп Иванов №2
-                span Техника, на которую установили двигатель
-                span Модель двигателя
+                h3.reviews-name Филипп Иванов №2
+                span.transp-name Техника, на которую установили двигатель №2
+                span.model-name Модель двигателя №2
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                a(href="#") Смотреть полностью
+                p.hidden.reviews-full Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu ip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.рую установили двигатель Модель двигателя №2
+                a(href="javascript:;" data-fancybox data-src="#reviews-pop").open-reviews Смотреть полностью
           
 
           //- Reviews Slide
@@ -58,8 +61,9 @@ mixin reviews(data)
               .reviews-slide__photo
                 img(src="static/img/assets/reviews/rev.jpg", alt="")
               .reviews-slide__text
-                h3 Филипп Иванов №3
-                span Техника, на которую установили двигатель
-                span Модель двигателя
+                h3.reviews-name Филипп Иванов №3
+                span.transp-name Техника, на которую установили двигатель №3
+                span.model-name Модель двигателя №3
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                a(href="#") Смотреть полностью
+                p.hidden.reviews-full Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu ip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.рую установили двигатель Модель двигателя №3
+                a(href="javascript:;" data-fancybox data-src="#reviews-pop").open-reviews Смотреть полностью
