--- a/markup/components/footer/footer.jade
+++ b/markup/components/footer/footer.jade
@@ -105,3 +105,15 @@ mixin footer(data)
       .form-group
         input(type="checkbox" checked required id='model-check')
         label(for="model-check") Я согласен на обработку персональных данных
+  
+  #reviews-pop.hidden.reviews-pop
+    .reviews-slide
+      .reviews-slide__item
+        .reviews-slide__photo
+          img(src="static/img/assets/reviews/rev.jpg",  id='rev-pop__img' alt="")
+        .reviews-slide__text
+          h3#rev-pop__name Филипп Иванов 
+          span#rev-pop__trans Техника, на которую установили двигатель
+          span#rev-pop__model Модель двигателя
+          p#rev-pop__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu ip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.рую установили двигатель Модель двигателя
+  
