--- a/markup/components/price/price.jade
+++ b/markup/components/price/price.jade
@@ -65,7 +65,7 @@ mixin price(data)
           .price-cell
             span от 240 000
           .price-cell.price-cell__link
-            a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-236Д') Узнать точную ценуу
+            a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-236Д') Узнать точную цену
         
         //- Price Row
         .price-row
