--- a/markup/components/offer/offer.styl
+++ b/markup/components/offer/offer.styl
@@ -53,6 +53,7 @@
     margin-bottom 25px
     h3
       margin-bottom 7px
+      font-family $Semi
     span
       color $gr
       font-family $Italic
