--- a/markup/static/stylus/etc/etc.styl
+++ b/markup/static/stylus/etc/etc.styl
@@ -62,3 +62,75 @@
   .footer span, .footer a
     font-size 20px
     line-height 40px
+
+  h1, h2
+    font-size 33px
+    line-height 47px
+  h3
+    font-size 24px
+    line-height 28px
+  p
+    font-size 16px
+    line-height 20px
+  
+  .home
+    height 850px
+    &-adv
+      &__text
+        span  
+          line-height 20px
+      
+  .offer
+    &-item
+      &__photo
+        margin-bottom 30px
+      &__title
+        margin-bottom 10px
+    
+  .price-cell span
+    font-size 18px
+    line-height 24px
+  .price-bottom__tl
+    margin-right 50px
+  .contract-item__title h3
+    font-size 24px
+  .contract-item__text p
+    font-size: 16px
+  section
+    padding-top 50px
+    padding-bottom 50px
+  
+  .title
+    margin-bottom 50px
+  select
+    width 520px
+  .quiz.showform 
+    .form-row
+      align-items center
+      .form-group
+        width 32%
+        margin-right 2%
+        &:nth-child(3)
+          margin-right 0
+        &:nth-child(4)
+          margin-right 8%
+          width 32%
+          .button
+            width 100%
+            padding 0
+            justify-content center
+        &:nth-child(5)
+          width 60%
+          margin-right 0
+  
+  .any
+    padding-top 50px
+  
+  .footer
+    span,
+    a
+      font-size 16px
+      line-height 30px
+
+  .offer
+    background-size 15%
