--- a/markup/components/offer/offer.styl
+++ b/markup/components/offer/offer.styl
@@ -28,6 +28,9 @@
         object-fit: cover
     &__title
       text-align center
+      display flex
+      align-items center
+      justify-content center
       margin-bottom 20px
     &__text
       text-align center
