--- a/markup/static/stylus/etc/etc.styl
+++ b/markup/static/stylus/etc/etc.styl
@@ -134,3 +134,86 @@
 
   .offer
     background-size 15%
+
+
+@media screen and (max-width: 993px)
+  .content
+    width 740px
+  
+  .header
+    &-tagline
+      display none
+    &-left
+      width 200px
+    &-right
+      width calc(100% - 250px)
+  .header-cnt:first-child
+    margin-right 90px
+  .home
+    background-position 66%
+    &-left
+      width 70%
+    &-title
+      padding-bottom 50px
+    &-advantages
+      padding-bottom 50px
+  h1, h2
+    font-size 28px
+    line-height 35px
+  h3
+    font-size 20px
+    line-height 25px
+  .home
+    height 750px
+  
+  .offer
+    &-items
+      width 100%
+    &-item
+      padding-left 10px
+      padding-right 10px
+      &__photo
+        width 100%
+  .video-wrapper
+    width 100%
+  .save-item__photo
+    width 100%
+  .price-cell 
+    padding 10px
+    span,
+    a
+      font-size 14px
+      line-height 20px
+
+  .price-bottom
+    flex-wrap: wrap
+    &__tl
+      margin-right 0
+      margin-bottom 20px
+
+  .contract
+    padding-bottom 0
+    &-items
+      flex-wrap: wrap
+    &-item
+      width 50%
+      margin-bottom 100px
+
+    &-tagline
+      margin-bottom 80px
+  .virew-video
+    height 200px
+  .sertificates
+    padding-bottom 50px
+  .portfolio-item
+    height 200px
+  .quiz-title h3
+    font-size 20px
+  h4
+    font-size 16px
+    line-height 25px
+  .any .subtitle h4
+    line-height 25px
+  .any-phones a
+    font-size 30px
+    
